# Autonomous_Person_Tracking_Car

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
deepsort/include/: datatype.h
include/: car_controller.hpp
include/private/: Model.h
src/: car_controller.cpp  main.cpp
testing/gpio/: CMakeLists.txt  main.cpp
yolo/src/: yolov5_lib.cpp
